fixed right spacing to wiki

--- a/sites/all/modules/custom/cc_wiki/cc_wiki.css
+++ b/sites/all/modules/custom/cc_wiki/cc_wiki.css
@@ -13,7 +13,7 @@
 
 #block-cc-wiki-cc-wiki-home .featured-column-first {
   float: left;
-  width: 200px;
+  width: 190px;
   margin-right: 20px;
   padding: 0 .8em;
 }
